--- a/index.html
+++ b/index.html
@@ -95,19 +95,26 @@
         <img src="img/customer_Chill-Industries.svg" alt="">
       </div>
     </section>
-    <section>
-      <h2>The swirling staircase</h2>
-      <p>Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.</p>
+    <section class="project-cover">
+      <img src="img/swirling-staircase-cover.png" alt="building cover picture" class="project-cover__image">
+      <div class="project-cover__text text-position-left">
+        <h4 class="project-cover__header common-header-cap">The swirling staircase</h4>
+        <p class="common-paragraph">Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.</p>
+      </div>
     </section>
-    <section>
-      <h2>Featured projects</h2>
-      <p>Some of the latest and greatest projects from us here at Wishbone+Partners.</p>
-      <img src="img/projects_building-sky.jpg" alt="">
-      <img src="img/projects_brewery.jpg" alt="">
-      <h4>New York</h4>
-      <h3>Big Road Brewery</h3>
-      <img src="img/projects_building-white-bg.jpg" alt="">
-      <button>View all projects</button>
+    <section class="featured-projects">
+      <h2 class="featured-projects__header hedaer-weight-normalizer">Featured projects</h2>
+      <p class="featured-cover__paragraph">Some of the latest and greatest projects from us here at Wishbone+Partners.</p>
+      <div class="featured-projects__image-caption">
+        <h4 class="common-header-cap">New York</h4>
+        <p class="common-paragraph image-caption__paragraph">Big Road Brewery</p>
+      </div>
+      <div class="featured-projects__pictures">
+        <img src="img/projects_building-sky.jpg" alt="Building project photo"  class="featured-projects__image">
+        <img src="img/projects_brewery.jpg" alt="" class="featured-projects__image">
+        <img src="img/projects_building-white-bg.jpg" alt=""  class="featured-projects__image">
+      </div>
+      <a href="#" class="common-button">View all projects</a>
     </section>
     <section>
       <h2>Meet our team</h2>
